# tab2md

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/tab2md/: browser_ops.py  main.py
src/tab2md/strategies/: base.py  basic.py  geekbang.py
strategies/: browser_ops.py
tools/: bundle_repo.py
